[metadata]
name = confluence-exporter
version = 0.2.0
author = Christophe Le Douarec
author_email = ledouarec@gmail.com
description = Export Confluence page and convert to others formats
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cledouarec/confluence-export
license = Apache License 2.0
license_files = LICENSE
keywords = confluence atlassian extractor
classifiers =
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Environment :: Console
    Topic :: Utilities

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    =src
install_requires =
    atlassian-python-api
    PyPDF2
    python-dotenv
    PyYAML

[options.packages.find]
where = src

[options.extras_require]
dev =
    coverage
    pre-commit
    pylint
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    confluence-export = confluenceexport.cli:main

[aliases]
test=pytest

[flake8]
ignore = W503
max-line-length = 79
# max-complexity = 18
select = B,C,E,F,W,T4,B9
